[package]
name = "loveletter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false

[dependencies]
actix-files = {version="0.6.2", optional=true}
actix-web = {version="4.3.1", optional=true}
async-recursion = {version="1.0.4", optional=true}
broadcaster = {version="1.0.0", optional=true}
cfg-if = "1.0.0"
futures = {version="0.3.28", optional=true}
lazy_static = {version="1.4.0", optional=true}
rand = {version="0.8.5", optional=true}
reqwest = {version="0.11.16", optional=true}
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
	"runtime-actix-native-tls",
	"sqlite",
	"migrate",
], optional = true }
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["client"]
server = ["dep:actix-web", "dep:sqlx", "dep:async-recursion", "dep:lazy_static", "dep:broadcaster", "dep:futures", "dep:rand", "dep:actix-files"]
client = ["dep:reqwest"]

[lib]
name = "loveletter"
path = "./src/lib.rs"
